--- a/sass/components/common/_base-layout.scss
+++ b/sass/components/common/_base-layout.scss
@@ -60,7 +60,7 @@
 .footer-fixed-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: calc(100% + 1px);
 }
 
 .main-content {
